update atividade php 02

--- a/AtividadePHP02/numeros primos/index.html
+++ b/AtividadePHP02/numeros primos/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <!--Construa uma aplicação (script) que receba um número não nulo e informe se o mesmo é primo. Vale lembrar que o número será primo se ele for divisível por ele próprio e por 1. Obs.: O número 1 não é primo e o menor número primo é 2.-->
     <table border="2">
 
         <form action="arquivo.php" method="post">
@@ -15,10 +15,10 @@
             <th colspan="2"><h1>Números Primos</h1></th>
         </tr>
         <tr>
-            <th>Digite um número: </th>
-            <th><input type="number" name="n1"></th>
+            <td><h2>Digite um número:</h2></td>
+            <td><input type="number" name="n1"></td>
         </tr>
-        <tr class="btn">
+        <tr class="botao">
             <td><input type="reset" value="Limpar"></td>
             <td><input type="submit" value="Enviar"></td>
         </tr>
