--- a/AtividadePHP02/ordenação/index.html
+++ b/AtividadePHP02/ordenação/index.html
@@ -7,6 +7,7 @@
     <title>Ordenação</title>
 </head>
 <body>
+    <!--Construa uma aplicação (script) que receba 3 números inteiros e verifique qual o maior, o menor ou se ambos são iguais, em seguida informe-os em ordem crescente e também na ordem decrescente.-->
     <table border="2">
         <form action="script.php" method="post">
             <tr>
