--- a/AtividadePHP02/par e impar/index.html
+++ b/AtividadePHP02/par e impar/index.html
@@ -7,6 +7,7 @@
     <title>Par ou Ímpar</title>
 </head>
 <body>
+    <!--Elabore uma aplicação (script) que receba um número e verifique se o mesmo é par ou ímpar e qual o maior e o menor entre eles.-->
     <table border="2">
         <form action="script.php" method="post">
             <tr>
