--- a/AtividadePHP02/signos/index.html
+++ b/AtividadePHP02/signos/index.html
@@ -7,6 +7,7 @@
     <title>Signo do Zodíaco</title>
 </head>
 <body>
+    <!--Construa uma estrutura (script) que receba um nome uma data no formato dia e mês de uma pessoa por fim informar o nome dela e o signo do zodíaco.-->
     <table border="2">
         <form action="script.php" method="post">
             <tr>
